# edu_drim_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  database.py  dependencies.py  main.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 3dd22736f22a_init.py  a7f1b29d4e10_add_professors.py  c73348c4bbe7_teacher_course_class_sanity_id.py  e5a2d1f0c8b7_add_user_types.py
models/: __init__.py  class_.py  course.py  professor.py  quiz.py  tag.py  teacher.py  user_type.py
routers/: auth.py  classes.py  courses.py  professors.py  quiz.py  teacher_courses.py  user_types.py  webhooks.py
schemas/: class_.py  course.py  professor.py  quiz.py  teacher.py  user_type.py
services/: sanity.py  tag_matcher.py
